--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "7c909baa-47e0-4c92-be4b-676d4c095fbd"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
