--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "4f0fbbe2-26ce-47dc-8f04-60d7af24b54c"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
